# guideline_rag

./: .gitignore  chunking.ipynb  doc_hashes.csv  docling.ipynb  embedding.ipynb  main.py  process_doc.py  pyproject.toml  scrape_awmf.ipynb
