[project]
name = "guideline-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.6.0",
    "arize-phoenix-otel>=0.9.2",
    "docling>=2.32.0",
    "einops>=0.8.1",
    "ftfy>=6.3.1",
    "generative-ai-hub-sdk[all]>=4.12.4",
    "google-genai>=1.15.0",
    "hf-xet>=1.1.1",
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langchain-chroma>=0.1.2",
    "langchain-community>=0.3.21",
    "langchain-google-genai>=2.1.4",
    "langchain-openai>=0.3.16",
    "langgraph>=0.4.3",
    "numpy<2",
    "openai>=1.78.1",
    "pdfminer>=20191125",
    "pypdf2>=3.0.1",
    "qwen-vl-utils>=0.0.11",
    "requests>=2.32.3",
    "tenacity>=9.1.2",
    "tesseract>=0.1.3",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
    "unstructured-ingest[pdf]>=1.0.28",
    "unstructured[pdf]>=0.17.2",
]
